resources/css/kt-framing.css
/* ------------------ generic ------------------ */

html {
    height: 100%;
}

body
{
    padding: 1em ; border: 0; margin: 0;
    font-size: smaller;
    font-family: sans-serif;
}

.floatClear
{
    clear: both;
    height: 1px !important;
    margin: 0; border: 0; padding: 0;
    width: 1px;
}

#kt-wrapper
{
    margin-top: 15px;
    margin-left: 15px;
}

.copyright {
    margin-top: 1em;
    color: #888;
    font-size: smaller;
    border-top: 1px solid #ccc;
}

.action_overview_scroll {
	border:1px ;
	overflow: auto;
	width: 80%;
	min-height: 200px;
	position: relative;
	top:100px;
	left:100px;
}

#pageBody {
    margin-top: 20px;
    margin-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    border: 1px solid #BBBBBB;
    padding: 20px;
    min-height: 800px;
    min-width: 600px;
    height: auto;
    /*background-image: url(../../resources/graphics/page_bg.gif);*/
/*    background-repeat: repeat-x;*/
    z-index: 0;
}

#bodyPad {
   margin-top:15px;
   margin-left:15px;
   margin-right:15px;
}

#wrapper {
	min-width: 750px;
}
/* ------------------ logobar ------------------ */

#logobar
{
    position: relative;
    width: 100%;
    margin: 0.5em 0 0.5em 0;
}

#logobar .secondary
{
    float: right;
    border: 0;
}

#logobar .primary
{
    float: left;
    border: 0;
}

/* ------------------ navbar ------------------- */

#navbarBorder {
    position: relative;
    height: 2.36em;
    width: 99%;
}

#navbarLeft {
    position: absolute;
    background: url(../../resources/graphics/menu_corner_left.png) top left no-repeat;
    width:8px;
    height:2.36em;
    top:0px;
    left:0px;
}

#navbarRight {
    position: absolute;
    background: url(../../resources/graphics/menu_corner_right.png) top right no-repeat;
    width:8px;
    height:2.36em;
    top:0px;
    right:0px;
}

#navbar
{
    position: relative;
    width: auto;
    background: url(../../resources/graphics/menubg.png) top left repeat-x;
    padding: 0em 1em;
    margin-bottom: 1em;
    height: 2.36em;
    overflow: hidden;
    top:0px;
}

#navbar ul
{
    list-style: none;
    display: block;
    margin: 0;
    padding: 0;
    border: 0;
}

#navbar ul li
{
    padding: 0.5em 0.75em;
    display: block;
    float: left;
    color: white;
}

#navbar ul li.pref
{
    float: right;
}

#navbar ul li.active {
    background: #6c8c2f url(../../resources/graphics/menubg-active.png) top left repeat-x;
    height: 1.4em;
}

#navbar ul li a
{
    color: white;
    text-decoration: none;
    border-bottom: 1px transparent;
}

#navbar ul li a:hover
{
    border-bottom: 1px solid white;
}

#menu_divider {
    background: url(../../resources/graphics/menu_divider.png) top left no-repeat;
    width: 2px;
    height: 31px;
}

.ktLoggedInUser {
    font-weight: bold;
}

/*
a.main_nav_item {
    background: transparent url(../../resources/graphics/home-navbar.gif) center left no-repeat;
    padding-left: 1.5em;
}
*/
#navbar ul li.active a:hover,
#navbar ul li.active a
{
    font-weight: bold;

}

/* ------------------ breadcrumbs -------------- */

#breadcrumbs
{
    margin-top: 0.5em;
    margin-bottom: 1em;
    margin-left: 0.5em;
    color: #333;
    text-transform: lowercase;
}

#breadcrumbs .primary
{
    font-weight: bold;
}

#breadcrumbs .additional
{
    color: #888;
}

#breadcrumbs a
{
    color: #344a6a;
    text-decoration: none;
    border-bottom: 1px solid #344a6a;

}

#breadcrumbs a:hover
{
    color: #9d0a0a;
    text-decoration: none;
    border-bottom: 1px solid #9d0a0a;
}

/* ------------------ portlets ----------------- */

#portletbar
{
    float: left;
    width: 16em;
    left: 1em;
    background: transparent;
    margin: 0 10px 0 0 ;
    padding: 0;
    z-index: 2;  /*  IE layers this below the content bar. */
}

/* horrible, custom dashboard hack. */
.noportlets #portletbar { display: none; }

#portletbar .portlet {
    position: relative;
    margin: 0 0 1.5em 0;
    background: url(../../resources/graphics/portlet_corner_topleft_collapsed.png) top left no-repeat;
    padding: 0 0 0 0;
    border: 0;
    z-index: 2;
}

#portletbar .portlet .portletTopRepeat {
    position: absolute;
    background: url(../../resources/graphics/portlet_bg_collapsed.png) top left repeat-x;
    top: 0;
    left: 30px;
    height: 30px;
    width: 80%;
    z-index: -1;
    border:0;
}

#portletbar .portlet .portletTopRight {
    position: absolute;
    background: url(../../resources/graphics/portlet_corner_topright_collapsed.png) top right no-repeat;
    top: 0;
    right: 0px;
    height: 30px;
    width: 60%;
    z-index: -1;
    border: 0;
}

#portletbar .portlet.expanded {
    position: relative;
    margin: 0 0 1.5em 0;
    padding: 0 0 0 0;
    background: url(../../resources/graphics/portlet_corner_topleft.png) top left no-repeat;
    border: 0;
    z-index: 2;
}

#portletbar .portlet.expanded .portletTopRepeat {
    position: absolute;
    background: url(../../resources/graphics/portlet_bg.png) top left repeat-x;
    top: 0px;
    left: 30px;
    height: 28px;
    width: 80%;
    z-index: -1;
    border: 0;
}

#portletbar .portlet.expanded .portletTopRight {
    position: absolute;
    background: url(../../resources/graphics/portlet_corner_topright.png) top right no-repeat;
    top: 0;
    right: 0px;
    height: 28px;
    width: 60%;
    z-index: -1;
    border: 0;
}

#portletbar .portlet .portletbody {
    background: url(../../resources/graphics/portlet_borderright.png) top right repeat-y;
    padding: 0 0 1em 0;
    margin-right: 1px;
    background-color: white;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    width: 99%;
    height: 100%;
}

/* Attempt to contain side portlet containers in MORE containers*/
/*
#portletbar .portlet.expanded .portletBodyDoubleTop {
    position: relative;
    width: 100%;
    height: 1px;
    top:0px;
    right:0px;
    border: 1px solid red;
}
/* ... */

